csbind/joltc_bindgen.cs


        [DllImport(__DllName, EntryPoint = "JPH_TaperedCylinderShape_GetTopRadius", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_TaperedCylinderShape_GetTopRadius(JPH_TaperedCylinderShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_TaperedCylinderShape_GetBottomRadius", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_TaperedCylinderShape_GetBottomRadius(JPH_TaperedCylinderShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_TaperedCylinderShape_GetConvexRadius", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_TaperedCylinderShape_GetConvexRadius(JPH_TaperedCylinderShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_TaperedCylinderShape_GetHalfHeight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_TaperedCylinderShape_GetHalfHeight(JPH_TaperedCylinderShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_ConvexHullShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_ConvexHullShapeSettings* JPH_ConvexHullShapeSettings_Create(JPH_Vec3* points, uint pointsCount, float maxConvexRadius);

        [DllImport(__DllName, EntryPoint = "JPH_ConvexHullShapeSettings_CreateShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_ConvexHullShape* JPH_ConvexHullShapeSettings_CreateShape(JPH_ConvexHullShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_ConvexHullShape_GetNumPoints", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_ConvexHullShape_GetNumPoints(JPH_ConvexHullShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_ConvexHullShape_GetPoint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_ConvexHullShape_GetPoint(JPH_ConvexHullShape* shape, uint index, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_ConvexHullShape_GetNumFaces", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_ConvexHullShape_GetNumFaces(JPH_ConvexHullShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_ConvexHullShape_GetNumVerticesInFace", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_ConvexHullShape_GetNumVerticesInFace(JPH_ConvexHullShape* shape, uint faceIndex);

        [DllImport(__DllName, EntryPoint = "JPH_ConvexHullShape_GetFaceVertices", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_ConvexHullShape_GetFaceVertices(JPH_ConvexHullShape* shape, uint faceIndex, uint maxVertices, uint* vertices);

        [DllImport(__DllName, EntryPoint = "JPH_MeshShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_MeshShapeSettings* JPH_MeshShapeSettings_Create(JPH_Triangle* triangles, uint triangleCount);

        [DllImport(__DllName, EntryPoint = "JPH_MeshShapeSettings_Create2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_MeshShapeSettings* JPH_MeshShapeSettings_Create2(JPH_Vec3* vertices, uint verticesCount, JPH_IndexedTriangle* triangles, uint triangleCount);

        [DllImport(__DllName, EntryPoint = "JPH_MeshShapeSettings_GetPerTriangleUserData", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_MeshShapeSettings_GetPerTriangleUserData(JPH_MeshShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_MeshShapeSettings_SetPerTriangleUserData", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_MeshShapeSettings_SetPerTriangleUserData(JPH_MeshShapeSettings* settings, [MarshalAs(UnmanagedType.U1)] bool perTriangleUserData);

        [DllImport(__DllName, EntryPoint = "JPH_MeshShapeSettings_Sanitize", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_MeshShapeSettings_Sanitize(JPH_MeshShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_MeshShapeSettings_CreateShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_MeshShape* JPH_MeshShapeSettings_CreateShape(JPH_MeshShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_MeshShape_GetTriangleUserData", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_MeshShape_GetTriangleUserData(JPH_MeshShape* shape, uint id);

        [DllImport(__DllName, EntryPoint = "JPH_HeightFieldShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_HeightFieldShapeSettings* JPH_HeightFieldShapeSettings_Create(float* samples, JPH_Vec3* offset, JPH_Vec3* scale, uint sampleCount);

        [DllImport(__DllName, EntryPoint = "JPH_HeightFieldShapeSettings_CreateShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_HeightFieldShape* JPH_HeightFieldShapeSettings_CreateShape(JPH_HeightFieldShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_HeightFieldShapeSettings_DetermineMinAndMaxSample", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HeightFieldShapeSettings_DetermineMinAndMaxSample(JPH_HeightFieldShapeSettings* settings, float* pOutMinValue, float* pOutMaxValue, float* pOutQuantizationScale);

        [DllImport(__DllName, EntryPoint = "JPH_HeightFieldShapeSettings_CalculateBitsPerSampleForError", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_HeightFieldShapeSettings_CalculateBitsPerSampleForError(JPH_HeightFieldShapeSettings* settings, float maxError);

        [DllImport(__DllName, EntryPoint = "JPH_HeightFieldShape_GetSampleCount", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_HeightFieldShape_GetSampleCount(JPH_HeightFieldShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_HeightFieldShape_GetBlockSize", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_HeightFieldShape_GetBlockSize(JPH_HeightFieldShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_HeightFieldShape_GetMaterial", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_PhysicsMaterial* JPH_HeightFieldShape_GetMaterial(JPH_HeightFieldShape* shape, uint x, uint y);

        [DllImport(__DllName, EntryPoint = "JPH_HeightFieldShape_GetPosition", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HeightFieldShape_GetPosition(JPH_HeightFieldShape* shape, uint x, uint y, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_HeightFieldShape_IsNoCollision", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_HeightFieldShape_IsNoCollision(JPH_HeightFieldShape* shape, uint x, uint y);

        [DllImport(__DllName, EntryPoint = "JPH_HeightFieldShape_ProjectOntoSurface", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_HeightFieldShape_ProjectOntoSurface(JPH_HeightFieldShape* shape, JPH_Vec3* localPosition, JPH_Vec3* outSurfacePosition, uint* outSubShapeID);

        [DllImport(__DllName, EntryPoint = "JPH_HeightFieldShape_GetMinHeightValue", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_HeightFieldShape_GetMinHeightValue(JPH_HeightFieldShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_HeightFieldShape_GetMaxHeightValue", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_HeightFieldShape_GetMaxHeightValue(JPH_HeightFieldShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_TaperedCapsuleShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_TaperedCapsuleShapeSettings* JPH_TaperedCapsuleShapeSettings_Create(float halfHeightOfTaperedCylinder, float topRadius, float bottomRadius);

        [DllImport(__DllName, EntryPoint = "JPH_TaperedCapsuleShapeSettings_CreateShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_TaperedCapsuleShape* JPH_TaperedCapsuleShapeSettings_CreateShape(JPH_TaperedCapsuleShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_TaperedCapsuleShape_GetTopRadius", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_TaperedCapsuleShape_GetTopRadius(JPH_TaperedCapsuleShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_TaperedCapsuleShape_GetBottomRadius", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_TaperedCapsuleShape_GetBottomRadius(JPH_TaperedCapsuleShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_TaperedCapsuleShape_GetHalfHeight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_TaperedCapsuleShape_GetHalfHeight(JPH_TaperedCapsuleShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_CompoundShapeSettings_AddShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_CompoundShapeSettings_AddShape(JPH_CompoundShapeSettings* settings, JPH_Vec3* position, JPH_Quat* rotation, JPH_ShapeSettings* shape, uint userData);

        [DllImport(__DllName, EntryPoint = "JPH_CompoundShapeSettings_AddShape2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_CompoundShapeSettings_AddShape2(JPH_CompoundShapeSettings* settings, JPH_Vec3* position, JPH_Quat* rotation, JPH_Shape* shape, uint userData);

        [DllImport(__DllName, EntryPoint = "JPH_CompoundShape_GetNumSubShapes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_CompoundShape_GetNumSubShapes(JPH_CompoundShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_CompoundShape_GetSubShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_CompoundShape_GetSubShape(JPH_CompoundShape* shape, uint index, JPH_Shape** subShape, JPH_Vec3* positionCOM, JPH_Quat* rotation, uint* userData);

        [DllImport(__DllName, EntryPoint = "JPH_CompoundShape_GetSubShapeIndexFromID", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_CompoundShape_GetSubShapeIndexFromID(JPH_CompoundShape* shape, uint id, uint* remainder);

        [DllImport(__DllName, EntryPoint = "JPH_StaticCompoundShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_StaticCompoundShapeSettings* JPH_StaticCompoundShapeSettings_Create();

        [DllImport(__DllName, EntryPoint = "JPH_StaticCompoundShape_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_StaticCompoundShape* JPH_StaticCompoundShape_Create(JPH_StaticCompoundShapeSettings* settings);
